--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,11 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.13",
     "@tanstack/react-query": "^4.3.8",
     "@trpc/client": "^10.7.0",
     "@trpc/react-query": "^10.7.0",
