--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
+    "@mui/x-data-grid": "^6.0.2",
     "@tanstack/react-query": "^4.3.8",
     "@trpc/client": "^10.7.0",
     "@trpc/react-query": "^10.7.0",
