--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/node-cron": "^3.0.7",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "mongodb": "^5.1.0",
     "nanoid": "^4.0.0",
     "node-cron": "^3.0.2",
     "zod": "^3.0.0"
