--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "@trpc/react-query": "^10.7.0",
     "@trpc/server": "^10.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.9",
