--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^5.1.0",
     "nanoid": "^4.0.0",
     "node-cron": "^3.0.2",
+    "openai": "^3.2.1",
     "zod": "^3.0.0"
   },
   "devDependencies": {
