--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "wait-port": "^1.0.1"
+  },
+  "dependencies": {
+    "googleapis": "^114.0.0"
   }
 }
