--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,11 @@
     "@aws-sdk/lib-dynamodb": "^3.238.0",
     "@trpc/server": "^10.7.0",
     "@types/node-cron": "^3.0.7",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "googleapis": "^123.0.0",
     "mongodb": "^5.1.0",
     "nanoid": "^4.0.0",
     "node-cron": "^3.0.2",
@@ -23,6 +26,8 @@
     "zod": "^3.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.7.20",
     "tsx": "^3.9.0",
     "typescript": "^4.8.3"
