--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,7 @@
 MONGO_DB_CONNECT_URI=
 OPENAI_API_KEY=
+GOOGLE_CLIENT_EMAIL=
+GOOGLE_PRIVATE_KEY=
+GOOGLE_ROOT_FOLDER_ID=
+GOOGLE_COVER_LETTER_TEMPLATE_ID=
+GOOGLE_RESUME_TEMPLATE_ID=
