--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
     "@aws-sdk/lib-dynamodb": "^3.238.0",
     "@trpc/server": "^10.7.0",
     "@types/node-cron": "^3.0.7",
+    "argon2": "^0.31.1",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "googleapis": "^123.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.1.0",
     "nanoid": "^4.0.0",
     "node-cron": "^3.0.2",
@@ -24,6 +26,7 @@
     "zod": "^3.0.0"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.7.20",
     "tsx": "^3.9.0",
     "typescript": "^4.8.3"
