--- a/.github/workflows/deloy-client.yaml
+++ b/.github/workflows/deloy-client.yaml
@@ -17,6 +17,11 @@ jobs:
       - uses: actions/checkout@v1
       - run: npm i
       - run: npm run build
+      - uses: actions/upload-artifact@v3
+        with:
+          name: dist-build
+          path: client/dist
+          retention-days: 1
 
   deploy:
     needs: build
@@ -32,5 +37,8 @@ jobs:
       #       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       #       AWS_REGION: "eu-central-1"
       #       SOURCE_DIR: "client/dist"
-      - run: ls ./client/dist
-      - run: ls ./client/dist/assets
+      - uses: actions/download-artifact@v3
+        with:
+          name: dist-build
+      - run: ls -a
+      - run: ls ./clien/dist
