add client env variables

--- a/.github/workflows/deloy-client.yaml
+++ b/.github/workflows/deloy-client.yaml
@@ -17,6 +17,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+      - run: printf ${{ secrets.ENV_FILE_CONTENT }} > .env
       - run: npm i
       - run: npm run build
       - uses: actions/upload-artifact@v3
