--- a/.github/workflows/deloy-client.yaml
+++ b/.github/workflows/deloy-client.yaml
@@ -17,8 +17,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - run: printf ${{ secrets.ENV_FILE_CONTENT }} > ./cleint/.env
-      - run: cat ./cleint/.env
+      - run: ls -a
+  #    - run: printf ${{ secrets.ENV_FILE_CONTENT }} > ./cleint/.env
+  #    - run: cat ./cleint/.env
   #     - run: npm i
   #     - run: npm run build
   #     - uses: actions/upload-artifact@v3
