--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dev": "run-p dev:*",
     "start:client": "npm run start -w client",
     "start:server": "npm run start -w server",
-    "start": "run-p start:*"
+    "start": "run-p start:*",
+    "upgrade": "cd ./server && node ./upgrade.js"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
